add photo customers

--- a/qr_pass/templates/access.html
+++ b/qr_pass/templates/access.html
@@ -8,6 +8,7 @@
     <div class="card-header">{{ name }}</div>
       <div class="card-body">
         <h1 class="card-title">ДОСТУП РАЗРЕШЕН</h1>
+        <img src="/media/{{ img }}" class="card-img-top" >
       </div>
   </div>
 </div>
@@ -17,6 +18,7 @@
     <div class="card-header">{{ name }}</div>
       <div class="card-body">
         <h1 class="card-title">ДОСТУП ЗАПРЕЩЕН</h1>
+        <img src="/media/{{ img }}">
       </div>
   </div>
 </div>
