--- a/qr_pass/templates/access.html
+++ b/qr_pass/templates/access.html
@@ -18,7 +18,7 @@
     <div class="card-header">{{ name }}</div>
       <div class="card-body">
         <h1 class="card-title">ДОСТУП ЗАПРЕЩЕН</h1>
-        <img src="/media/{{ img }}">
+        <img src="/media/{{ img }}" class="card-img-top" >
       </div>
   </div>
 </div>
