--- a/qr_pass/templates/index.html
+++ b/qr_pass/templates/index.html
@@ -19,6 +19,7 @@
         Создать
       {% endif %}
     </button>
+    <a href=" {% url 'passes:all_photo' %}" type="button" class="btn btn-secondary">Показать всех c фотографией</a>
   </form>
   </div>
 </div>
