--- a/qr_pass/templates/view-photo.html
+++ b/qr_pass/templates/view-photo.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div class="col d-flex justify-content-center">
-  <div class="card text-white text-center bg-success mb-3" style="max-width: 36rem;">
-
+  <div class="card text-black text-center bg-success mb-3" style="max-width: 36rem;">
     <div class="card text-center">
       <div class="card" style="width: 18rem; align: center">
         <img src="/media/{{ img.photo }}" class="card-img-top" >
@@ -13,7 +12,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
 {% endblock content %}
